--- a/final-project/contactus.html
+++ b/final-project/contactus.html
@@ -102,26 +102,36 @@
 
       <form action="get">
         <label for="firstname">First Name:</label>
-        <input type="text" id="firstname" name="firstname">
+        <input type="text" id="firstname" name="firstname" placeholder="Goodness">
 
         <label for="lastname">Last Name:</label>
-        <input type="text" id="lastname" name="lastname">
+        <input type="text" id="lastname" name="lastname" placeholder="Okafor">
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email">
+        <input type="email" id="email" name="email" placeholder="goodnessokafor462@gmail.com">
 
-        <label for="feedback">Name:</label>
+        <label for="feedback">Message:</label>
         <textarea name="feedback" id="feedback" cols="30" rows="10"></textarea>
 
         <input id="submit" type="submit">
       </form>
     </div>
   </main>
+  <div class="iframe">
+    <iframe
+      title="Area map"
+      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d84371.59729517039!2d7.282171261253809!3d9.148857368994495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sng!4v1706021749332!5m2!1sen!2sng"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
+  </div>
   <footer>
-    <a href="Home">Home</a>
-    <a href="Home">Reservations</a>
-    <a href="Home">Contact Us</a>
-    <a href="Home">Rentals</a>
+    <a href="index.html">Home</a>
+    <a href="rentals.html">Rentals</a>
+    <a href="reservation.html">Reservations</a>
+    <a href="contactus.html">Contact Us</a>
     <p>© 2024 | Goodness Arinze Okafor</p>
   </footer>
   <script src="scripts/hambuger.js"></script>
