--- a/final-project/index.html
+++ b/final-project/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="welcome">
         <h1>Welcome to ~Scoots~</h1>
-        <a href="#">Reservations</a>
+        <a href="reservation.html">Reservations</a>
       </div>
     </main>
   </div>
@@ -152,10 +152,10 @@
   </section>
 
   <footer>
-    <a href="Home">Home</a>
-    <a href="Home">Reservations</a>
-    <a href="Home">Contact Us</a>
-    <a href="Home">Rentals</a>
+    <a href="index.html">Home</a>
+    <a href="rentals.html">Rentals</a>
+    <a href="reservation.html">Reservations</a>
+    <a href="contactus.html">Contact Us</a>
     <p>© 2024 | Goodness Arinze Okafor</p>
   </footer>
 
