--- a/final-project/reservation.html
+++ b/final-project/reservation.html
@@ -144,10 +144,10 @@
   </main>
 
   <footer>
-    <a href="Home">Home</a>
-    <a href="Home">Reservations</a>
-    <a href="Home">Contact Us</a>
-    <a href="Home">Rentals</a>
+    <a href="index.html">Home</a>
+    <a href="rentals.html">Rentals</a>
+    <a href="reservation.html">Reservations</a>
+    <a href="contactus.html">Contact Us</a>
     <p>© 2024 | Goodness Arinze Okafor</p>
   </footer>
 
