--- a/final-project/contactus.html
+++ b/final-project/contactus.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="Goodness Arinzechukwu Okafor" />
   <meta name="description" content="course assignment portal" />
-  <meta property="og:title" content="~SCOOTS - Home" />
+  <meta property="og:title" content="~SCOOTS - Contact Us" />
   <meta property="og:type" content="website" />
   <meta property="og:image"
     content="https://t3.ftcdn.net/jpg/03/59/31/68/360_F_359316888_QL4VKw3ZLdZWeHGZaajVrt6jbWQG5NsM.jpg" />
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="styles/medium.css" />
   <link rel="stylesheet" href="styles/larger.css" />
   <title>
-    ~SCOOTS - HOME
+    ~SCOOTS - CONTACT US
   </title>
 </head>
 
