--- a/final-project/index.html
+++ b/final-project/index.html
@@ -106,7 +106,7 @@
     <div class="shoutout">
       <h2>Our Instagram</h2>
       <p>Follow Us on Instagram to catch the latest updates</p>
-      <a href="#">Follow Us</a>
+      <a href="https://www.instagram.com/">Follow Us</a>
     </div>
 
     <div class="weather">
