submit reserve page

--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -143,6 +143,8 @@
     <a href="contactus.html">Contact Us</a>
     <p>© 2024 | Goodness Arinze Okafor</p>
   </footer>
+
+  <script src="scripts/hambuger.js"></script>
 </body>
 
 </html>
