--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -38,7 +38,7 @@
     </div>
   </header>
   <main>
-    <div class="rental-hero">
+    <div class="contact-hero">
       <img src="images/rental-hero.png" alt="">
     </div>
     <div class="rentals">
