--- a/final-project/reservation.html
+++ b/final-project/reservation.html
@@ -38,8 +38,9 @@
     </div>
   </header>
 
-  <div class="herodiv">
+  <div class="contact-hero">
     <h2>Make Reservations With us</h2>
+    <img src="images/view-5.jpg" alt="">
   </div>
 
   <main class="reservations-main">
@@ -88,7 +89,7 @@
     </div>
 
     <div class="content">
-      <form action="#" class="form" method="get">
+      <form action="#" class="reserve contactus-form" method="get">
         <label for="fullname">Full Name: </label>
         <input type="text" id="fullname" name="fullname" required>
 
@@ -112,15 +113,13 @@
         <label for="rental-type">Rental Type</label>
         <select name="rental-type" id="rental-type" required>
           <option value="">Select Rental Type</option>
-          <option value="Metro Scooter">~Honda Metro Scooter</option>
-          <option value="Dio Scooter">~Honda Dio Scooter</option>
-          <option value="PCX150 Scooter">~Honda PCX150 Scooter</option>
-          <option value="Pioneer ATV">Honda Pioneer ATV</option>
-          <option value="Wrangler - 4 door with a/c">Jeep Wrangler - 4 door with a/c</option>
-          <option value="Wrangler - 2 door">Jeep Wrangler - 2 door</option>
+          <option value="~Honda Metro Scooter">~Honda Metro Scooter</option>
+          <option value="~Honda Dio Scooter">~Honda Dio Scooter</option>
+          <option value="~Honda PCX150 Scooter">~Honda PCX150 Scooter</option>
+          <option value="Honda Pioneer ATV">Honda Pioneer ATV</option>
+          <option value="Jeep Wrangler - 4 door with a/c">Jeep Wrangler - 4 door with a/c</option>
+          <option value="Jeep Wrangler - 2 door">Jeep Wrangler - 2 door</option>
         </select>
-        <div class="drive-in"></div>
-
 
         <label for="cruise-line">Crise Line: </label>
         <input type="text" name="cruise-line" id="cruise-line">
@@ -138,10 +137,22 @@
         <label for="submit"></label>
         <input type="submit" id="submit">
       </form>
-
     </div>
-
   </main>
+  <div class="info-bar">
+    <div class="info">
+      <h3>Security Deposit</h3>
+      <p>A $50 security deposit is required to confirm reservations.</p>
+    </div>
+    <div class="info">
+      <h3>Free Delivery</h3>
+      <p>Free delivery to Cozumel hotels or Airbnbs for 2+ day rentals.</p>
+    </div>
+    <div class="info">
+      <h3>Unlimited Millage</h3>
+      <p>Unlimited mileage.</p>
+    </div>
+  </div>
 
   <footer>
     <a href="index.html">Home</a>
