--- a/final-project/reservation.html
+++ b/final-project/reservation.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="styles/base.css" />
   <link rel="stylesheet" href="styles/medium.css" />
   <link rel="stylesheet" href="styles/larger.css" />
-  <title>
+  <title> 
     ~SCOOTS - RESERVATION
   </title>
 </head>
@@ -91,13 +91,13 @@
     <div class="content">
       <form action="#" class="reserve contactus-form" method="get">
         <label for="fullname">Full Name: </label>
-        <input type="text" id="fullname" name="fullname" required>
+        <input type="text" id="fullname" name="fullname"  placeholder="Goodness">
 
         <label for="number">Phone Number: </label>
-        <input type="tel" id="number" name="number" required>
+        <input type="tel" id="number" name="number" required placeholder="Okafor">
 
         <label for="email">Email: </label>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" required placeholder="goodnessokafor462@gmail.com">
 
         <label for="date">Date: </label>
         <input type="date" id="date" name="date" required>
@@ -108,7 +108,7 @@
         </select>
 
         <label for="state">State: </label>
-        <input type="text" id="state" name="state">
+        <input type="text" id="state" name="state" placeholder="Abuja">
 
         <label for="rental-type">Rental Type</label>
         <select name="rental-type" id="rental-type" required>
@@ -122,18 +122,18 @@
         </select>
 
         <label for="cruise-line">Crise Line: </label>
-        <input type="text" name="cruise-line" id="cruise-line">
+        <input type="text" name="cruise-line" id="cruise-line" placeholder="Optional">
 
         <label for="extra">Extra Needs: </label>
-        <textarea name="extra" id="extra" cols="30" rows="10">
+        <textarea name="extra" id="extra" cols="30" rows="10 " placeholder="Optional">
 
         </textarea>
 
         <label for="drop-off">Drop Off</label>
-        <textarea name="drop-off" id="drop-off" cols="30" rows="10">
+        <textarea name="drop-off" id="drop-off" cols="30" rows="10" placeholder="'Optional">
 
         </textarea>
-
+   
         <label for="submit"></label>
         <input type="submit" id="submit">
       </form>
@@ -163,7 +163,6 @@
   </footer>
 
   <script src="scripts/hambuger.js"></script>
-  <script src="scripts/drivein.js"></script>
   <script src="scripts/getcountries.js"></script>
 </body>
 
