changed image format

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -44,7 +44,7 @@
         <div class="cancel">ⓧ</div> <!-- weather popup-->
       </div>
       <div class="welcome-img">
-        <img src="images/rental-4.webp" alt="" />
+        <img src="images/welcome-img.webp" alt="" />
       </div>
       <div class="welcome">
         <h1>Welcome to ~Scoots~</h1>
@@ -54,19 +54,19 @@
   </div>
   <div class="display-1">
     <div class="table">
-      <img src="images/display-1.png" alt="table" />
+      <img src="images/display-1.webp" alt="display-1" />
       <h3>WILLIS SPORT</h3>
       <p>SARGE GREEN </p>
       <p>17-inch MOAB Black Aluminum Wheels</p>
     </div>
     <div class="chair">
-      <img src="images/display-2.png" alt="sofa" />
+      <img src="images/display-2.webp" alt="display-2" />
       <h3>SPORT S</h3>
       <p>BLACK </p>
       <p>Power Windows and Power Locks</p>
     </div>
     <div class="chair">
-      <img src="images/display-3.png" alt="sofa" />
+      <img src="images/display-3.webp" alt="display-3" />
       <h3>RUBICON</h3>
       <p>BRIGHT WHITE</p>
       <p>Off Road Plus Mode</p>
@@ -75,30 +75,30 @@
 
   <div class="blog">
     <div class="blog-1">
-      <img src="images/rsz_1view-1.jpg" alt="blog-1" />
+      <img src="images/view-1.webp" alt="blog-1" />
       <p>
         Learn How we integrate the latest tech to make your experience with us
         wonderful!
       </p>
-      <a href="#">Learn More</a>
+      <a href="contact.html">Learn More</a>
     </div>
 
     <div class="blog-1">
-      <img src="images/rsz_1view-6.jpg" alt="blog-2" />
+      <img src="images/view-2.webp" alt="blog-2" />
       <p>
         Learn How we integrate the latest tech to make your experience with us
         wonderful!
       </p>
-      <a href="#">Learn More</a>
+      <a href="contact.html">Learn More</a>
     </div>
 
     <div class="blog-1">
-      <img src="images/rsz_view-5.jpg" alt="blog-3" />
+      <img src="images/view-3.webp" alt="blog-3" />
       <p>
         Learn How we integrate the latest tech to make your experience with us
         wonderful!
       </p>
-      <a href="#">Learn More</a>
+      <a href="contact.html">Learn More</a>
     </div>
   </div>
 
