--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -39,41 +39,41 @@
   </header>
   <main>
     <div class="contact-hero">
-      <img src="images/rental-hero.png" alt="">
+      <img src="images/rental-hero.webp" alt="">
     </div>
     <div class="rentals">
       <div class="showcase">
-        <img src="images/rental-1.png" alt="">
+        <img src="images/rental-1.webp" alt="">
         <h4>Honda Metro Scooter</h4>
         <p class="priceful"></p>
         <p class="pricehalf"></p>
       </div>
       <div class="showcase">
-        <img src="images/rental-3s.png" alt="">
+        <img src="images/rental-2.webp" alt="">
         <h4>Honda Metro Scooter</h4>
         <p class="priceful"></p>
         <p class="pricehalf"></p>
       </div>
       <div class="showcase">
-        <img src="images/rental-3.png" class="scale" alt="">
+        <img src="images/rental-3.webp" class="scale" alt="">
         <h4>Honda Metro Scooter</h4>
         <p class="priceful"></p>
         <p class="pricehalf"></p>
       </div>
       <div class="showcase">
-        <img src="images/rental-5.png" alt="">
+        <img src="images/rental-4.webp" alt="">
         <h4>Honda Metro Scooter</h4>
         <p class="priceful"></p>
         <p class="pricehaalf"></p>
       </div>
       <div class="showcase">
-        <img src="images/rental-4.png" alt="">
+        <img src="images/rental-5.webp" alt="">
         <h4>Honda Metro Scooter</h4>
         <p class="priceful"></p>
         <p class="pricehalf"></p>
       </div>
       <div class="showcase">
-        <img src="images/rental-6.png" class="scale" alt="">
+        <img src="images/rental-6.webp" class="scale" alt="">
         <h4>Honda Metro Scooter</h4>
         <p class="pricehalf"></p>
       </div>
