--- a/final-project/reservation.html
+++ b/final-project/reservation.html
@@ -40,7 +40,7 @@
 
   <div class="contact-hero">
     <h2>Make Reservations With us</h2>
-    <img src="images/view-5.jpg" alt="">
+    <img src="images/view-3.webp" alt="">
   </div>
 
   <main class="reservations-main">
