--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -38,7 +38,7 @@
     </div>
   </header>
   <div class="contact-hero">
-    <img src="images/contact-us.png" alt="">
+    <img src="images/contact-us.webp" alt="">
     <h2>Contact Us</h2>
   </div>
 
