--- a/final-project/index.html
+++ b/final-project/index.html
@@ -77,8 +77,7 @@
     <div class="blog-1">
       <img src="images/view-1.webp" alt="blog-1" />
       <p>
-        Learn How we integrate the latest tech to make your experience with us
-        wonderful!
+        Experience the captivating vistas of the beach and the ocean with our unparalleled perspective!
       </p>
       <a href="contact.html">Learn More</a>
     </div>
@@ -86,8 +85,7 @@
     <div class="blog-1">
       <img src="images/view-2.webp" alt="blog-2" />
       <p>
-        Learn How we integrate the latest tech to make your experience with us
-        wonderful!
+        The nighttime presents a delight to the senses, offering captivating vistas and enchanting scenery to behold.
       </p>
       <a href="contact.html">Learn More</a>
     </div>
@@ -95,8 +93,8 @@
     <div class="blog-1">
       <img src="images/view-3.webp" alt="blog-3" />
       <p>
-        Learn How we integrate the latest tech to make your experience with us
-        wonderful!
+        The ocean beckons with its exhilarating waves, inviting you to surf to your heart's content! Don't hesitate any
+        longer
       </p>
       <a href="contact.html">Learn More</a>
     </div>
@@ -121,7 +119,7 @@
       <p class="days"></p>
     </div>
   </div>
-  
+
 
   <section class="rental-summary">
     <h3>Rental Summary</h3>
@@ -152,11 +150,30 @@
   </section>
 
   <footer>
-    <a href="index.html">Home</a>
-    <a href="rentals.html">Rentals</a>
-    <a href="reservation.html">Reservations</a>
-    <a href="contactus.html">Contact Us</a>
-    <p>© 2024 | Goodness Arinze Okafor</p>
+    <div class="footer">
+      <div class="project">
+        <p>
+          WDD-230 Final Prjoect
+        </p>
+        <p>Goodness Arinze Okafor</p>
+      </div>
+
+      <div class="links">
+        <a href="index.html">Home</a>
+        <a href="rentals.html">Rentals</a>
+        <a href="reservation.html">Reservations</a>
+        <a href="contactus.html">Contact Us</a>
+      </div>
+
+      <div class="social-media">
+        <a href="#"><img src="images/facebook.png" alt=""></a>
+        <a href="#"><img src="images/instagram.png" alt=""></a>
+        <a href="#"><img src="images/linkedin.png" alt=""></a>
+        <a href="#"><img src="images/twitter.png" alt=""></a>
+      </div>
+    </div>
+    <hr>
+    <p class="copyright">© 2024 | Goodness Arinze Okafor</p>
   </footer>
 
   <script src="scripts/hambuger.js"></script>
