--- a/final-project/reservation.html
+++ b/final-project/reservation.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="styles/base.css" />
   <link rel="stylesheet" href="styles/medium.css" />
   <link rel="stylesheet" href="styles/larger.css" />
-  <title> 
+  <title>
     ~SCOOTS - RESERVATION
   </title>
 </head>
@@ -91,7 +91,7 @@
     <div class="content">
       <form action="#" class="reserve contactus-form" method="get">
         <label for="fullname">Full Name: </label>
-        <input type="text" id="fullname" name="fullname"  placeholder="Goodness">
+        <input type="text" id="fullname" name="fullname" placeholder="Goodness">
 
         <label for="number">Phone Number: </label>
         <input type="tel" id="number" name="number" required placeholder="Okafor">
@@ -133,7 +133,7 @@
         <textarea name="drop-off" id="drop-off" cols="30" rows="10" placeholder="'Optional">
 
         </textarea>
-   
+
         <label for="submit"></label>
         <input type="submit" id="submit">
       </form>
@@ -155,11 +155,30 @@
   </div>
 
   <footer>
-    <a href="index.html">Home</a>
-    <a href="rentals.html">Rentals</a>
-    <a href="reservation.html">Reservations</a>
-    <a href="contactus.html">Contact Us</a>
-    <p>© 2024 | Goodness Arinze Okafor</p>
+    <div class="footer">
+      <div class="project">
+        <p>
+          WDD-230 Final Prjoect
+        </p>
+        <p>Goodness Arinze Okafor</p>
+      </div>
+
+      <div class="links">
+        <a href="index.html">Home</a>
+        <a href="rentals.html">Rentals</a>
+        <a href="reservation.html">Reservations</a>
+        <a href="contactus.html">Contact Us</a>
+      </div>
+
+      <div class="social-media">
+        <a href="#"><img src="images/facebook.png" alt=""></a>
+        <a href="#"><img src="images/instagram.png" alt=""></a>
+        <a href="#"><img src="images/linkedin.png" alt=""></a>
+        <a href="#"><img src="images/twitter.png" alt=""></a>
+      </div>
+    </div>
+    <hr>
+    <p class="copyright">© 2024 | Goodness Arinze Okafor</p>
   </footer>
 
   <script src="scripts/hambuger.js"></script>
