--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -105,11 +105,30 @@
   </main>
 
   <footer>
-    <a href="index.html">Home</a>
-    <a href="rentals.html">Rentals</a>
-    <a href="reservation.html">Reservations</a>
-    <a href="contactus.html">Contact Us</a>
-    <p>© 2024 | Goodness Arinze Okafor</p>
+    <div class="footer">
+      <div class="project">
+        <p>
+          WDD-230 Final Prjoect
+        </p>
+        <p>Goodness Arinze Okafor</p>
+      </div>
+
+      <div class="links">
+        <a href="index.html">Home</a>
+        <a href="rentals.html">Rentals</a>
+        <a href="reservation.html">Reservations</a>
+        <a href="contactus.html">Contact Us</a>
+      </div>
+
+      <div class="social-media">
+        <a href="#"><img src="images/facebook.png" alt=""></a>
+        <a href="#"><img src="images/instagram.png" alt=""></a>
+        <a href="#"><img src="images/linkedin.png" alt=""></a>
+        <a href="#"><img src="images/twitter.png" alt=""></a>
+      </div>
+    </div>
+    <hr>
+    <p class="copyright">© 2024 | Goodness Arinze Okafor</p>
   </footer>
   <script src="scripts/hambuger.js"></script>
   <script src="scripts/getrentals.js"></script>
