--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -121,10 +121,10 @@
       </div>
 
       <div class="social-media">
-        <a href="#"><img src="images/facebook.png" alt=""></a>
-        <a href="#"><img src="images/instagram.png" alt=""></a>
-        <a href="#"><img src="images/linkedin.png" alt=""></a>
-        <a href="#"><img src="images/twitter.png" alt=""></a>
+        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d" target="_blank"><img src="images/facebook.png" alt="facebook"></a>
+        <a href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+        <a href="linkedin.com/in/goodness-okafor-b2a993252/" target="_blank"><img src="images/linkedin.png" alt=""></a>
+        <a href="https://twitter.com/eznira_" target="_blank"><img src="images/twitter.png" alt="twitter"></a>
       </div>
     </div>
     <hr>
