--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -53,8 +53,8 @@
       <div class="address">
         <ul>
           <li>Address</li>
-          <li>No 28 Richard Mba Street</li>
-          <li>Byazhin, Kubwa Abuja</li>
+          <li>Near the Playa del Carmen-Cozumel</li>
+          <li>Ferry dock in el Centro de Cozumel</li>
         </ul>
 
         <ul>
@@ -71,8 +71,8 @@
         <!-- Second Address -->
         <ul>
           <li>Address</li>
-          <li>No 28 Richard Mba Street</li>
-          <li>Byazhin, Kubwa Abuja</li>
+          <li>Near the Terminal</li>
+          <li>Puerta Maya</li>
         </ul>
 
         <ul>
