--- a/final-project/index.html
+++ b/final-project/index.html
@@ -123,29 +123,38 @@
 
   <section class="rental-summary">
     <h3>Rental Summary</h3>
-    <p>
+    <h4>
       Explore our diverse range of vehicles for your adventures:
-    </p>
-    <p>
-      Honda Motor Scooters:
-    </p>
+    </h4>
 
-    <ul>
-      <li>Honda Metropolitan (49cc): Perfect for solo riders.</li>
-      <li>Honda Dio (110cc): Ideal for two-person journeys.</li>
-      <li>Honda PCX150 (149cc): Accommodates two riders comfortably.</li>
-    </ul>
+    <div class="summary">
+      <div class="scooters">
+        <p>
+          Honda Motor Scooters:
+        </p>
 
-    <p>Side-by-Side ATVs:</p>
-    <ul>
-      <li>Honda Pioneer 1000: Seats up to four passengers for off-road fun.</li>
-    </ul>
+        <ul>
+          <li>Honda Metropolitan (49cc): Perfect for solo riders.</li>
+          <li>Honda Dio (110cc): Ideal for two-person journeys.</li>
+          <li>Honda PCX150 (149cc): Accommodates two riders comfortably.</li>
+        </ul>
+      </div>
 
-    <p>Jeeps:</p>
-    <ul>
-      <li>Jeep Wrangler (4-door manual with A/C): Seats five individuals comfortably.</li>
-      <li>eep Wrangler (2-door open-air manual): Designed for four-person adventures./li>
-    </ul>
+      <div class="atv">
+        <p>Side-by-Side ATVs:</p>
+        <ul>
+          <li>Honda Pioneer 1000: Seats up to four passengers for off-road fun.</li>
+        </ul>
+      </div>
+
+      <div class="jeeps">
+        <p>Jeeps:</p>
+        <ul>
+          <li>Jeep Wrangler (4-door manual with A/C): Seats five individuals comfortably.</li>
+          <li>eep Wrangler (2-door open-air manual): Designed for four-person adventures./li>
+        </ul>
+      </div>
+    </div>
 
   </section>
 
@@ -166,8 +175,10 @@
       </div>
 
       <div class="social-media">
-        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d" target="_blank"><img src="images/facebook.png" alt="facebook"></a>
-        <a href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" target="_blank"><img src="images/instagram.png" alt="Instagram"></a>
+        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d" target="_blank"><img src="images/facebook.png"
+            alt="facebook"></a>
+        <a href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" target="_blank"><img
+            src="images/instagram.png" alt="Instagram"></a>
         <a href="linkedin.com/in/goodness-okafor-b2a993252/" target="_blank"><img src="images/linkedin.png" alt=""></a>
         <a href="https://twitter.com/eznira_" target="_blank"><img src="images/twitter.png" alt="twitter"></a>
       </div>
