--- a/final-project/index.html
+++ b/final-project/index.html
@@ -175,12 +175,12 @@
       </div>
 
       <div class="social-media">
-        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d" target="_blank"><img src="images/facebook.png"
+        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d" target="_blank"><img src="images/Facebook.svg"
             alt="facebook"></a>
         <a href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" target="_blank"><img
-            src="images/instagram.png" alt="Instagram"></a>
-        <a href="linkedin.com/in/goodness-okafor-b2a993252/" target="_blank"><img src="images/linkedin.png" alt=""></a>
-        <a href="https://twitter.com/eznira_" target="_blank"><img src="images/twitter.png" alt="twitter"></a>
+            src="images/Instagram.svg" alt="Instagram"></a>
+        <a href="linkedin.com/in/goodness-okafor-b2a993252/" target="_blank"><img src="images/LinkedIn.svg" alt=""></a>
+        <a href="https://twitter.com/eznira_" target="_blank"><img src="images/twitter.svg" alt="twitter"></a>
       </div>
     </div>
     <hr>
