--- a/final-project/index.html
+++ b/final-project/index.html
@@ -162,7 +162,7 @@
     <div class="footer">
       <div class="project">
         <p>
-          WDD-230 Final Prjoect
+          WDD-230 Final Project
         </p>
         <p>Goodness Arinze Okafor</p>
       </div>
@@ -171,7 +171,7 @@
         <a href="index.html">Home</a>
         <a href="rentals.html">Rentals</a>
         <a href="reservation.html">Reservations</a>
-        <a href="contactus.html">Contact Us</a>
+        <a href="contact.html">Contact Us</a>
       </div>
 
       <div class="social-media">
