--- a/final-project/reservation.html
+++ b/final-project/reservation.html
@@ -158,7 +158,7 @@
     <div class="footer">
       <div class="project">
         <p>
-          WDD-230 Final Prjoect
+          WDD-230 Final Project
         </p>
         <p>Goodness Arinze Okafor</p>
       </div>
@@ -167,16 +167,16 @@
         <a href="index.html">Home</a>
         <a href="rentals.html">Rentals</a>
         <a href="reservation.html">Reservations</a>
-        <a href="contactus.html">Contact Us</a>
+        <a href="contact.html">Contact Us</a>
       </div>
 
       <div class="social-media">
-        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d" target="_blank"><img src="images/facebook.png"
+        <a href="https://www.facebook.com/eznira?mibextid=LQQJ4d" target="_blank"><img src="images/Facebook.svg"
             alt="facebook"></a>
         <a href="https://www.instagram.com/daddy.nira?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" target="_blank"><img
-            src="images/instagram.png" alt="Instagram"></a>
-        <a href="linkedin.com/in/goodness-okafor-b2a993252/" target="_blank"><img src="images/linkedin.png" alt=""></a>
-        <a href="https://twitter.com/eznira_" target="_blank"><img src="images/twitter.png" alt="twitter"></a>
+            src="images/Instagram.svg" alt="Instagram"></a>
+        <a href="linkedin.com/in/goodness-okafor-b2a993252/" target="_blank"><img src="images/LinkedIn.svg" alt=""></a>
+        <a href="https://twitter.com/eznira_" target="_blank"><img src="images/twitter.svg" alt="twitter"></a>
       </div>
     </div>
     <hr>
