change renatal names

--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -50,31 +50,31 @@
       </div>
       <div class="showcase">
         <img src="images/rental-2.webp" alt="">
-        <h4>Honda Metro Scooter</h4>
+        <h4>Honda Dio Scooter</h4>
         <p class="priceful"></p>
         <p class="pricehalf"></p>
       </div>
       <div class="showcase">
         <img src="images/rental-3.webp" class="scale" alt="">
-        <h4>Honda Metro Scooter</h4>
+        <h4>Honda PCX150 Scooter</h4>
         <p class="priceful"></p>
         <p class="pricehalf"></p>
       </div>
       <div class="showcase">
-        <img src="images/rental-4.webp" alt="">
-        <h4>Honda Metro Scooter</h4>
+        <img src="images/rental-6.webp" alt="">
+        <h4>Honda Pioneer ATV</h4>
         <p class="priceful"></p>
         <p class="pricehaalf"></p>
       </div>
       <div class="showcase">
         <img src="images/rental-5.webp" alt="">
-        <h4>Honda Metro Scooter</h4>
+        <h4>Jeep Wrangler - 4 door with a/c</h4>
         <p class="priceful"></p>
         <p class="pricehalf"></p>
       </div>
       <div class="showcase">
-        <img src="images/rental-6.webp" class="scale" alt="">
-        <h4>Honda Metro Scooter</h4>
+        <img src="images/rental-4.webp" class="scale" alt="">
+        <h4>Jeep Wrangler - 2 door</h4>
         <p class="pricehalf"></p>
       </div>
     </div>
