--- a/final-project/index.html
+++ b/final-project/index.html
@@ -151,7 +151,7 @@
         <p>Jeeps:</p>
         <ul>
           <li>Jeep Wrangler (4-door manual with A/C): Seats five individuals comfortably.</li>
-          <li>eep Wrangler (2-door open-air manual): Designed for four-person adventures./li>
+          <li>eep Wrangler (2-door open-air manual): Designed for four-person adventures.</li>
         </ul>
       </div>
     </div>
